--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,12 @@
 before_script:
-  - apt-get update -qq && apt-get install -y -qq sqlite3 libsqlite3-dev nodejs
+  - apt-get update -qy
+  - apt-get install -y nodejs
+  - bundle install --path /cache
   - ruby -v
   - which ruby
-  - gem install bundler --no-ri --no-rdoc
-  - bundle install --jobs $(nproc)  "${FLAGS[@]}"
+  - gem install bundler
+  - bundle install --path /cache
 
 rspec:
   script:
-    - rspec
+    - bundle exec rspec
