MISC #60237 - Setup CI
- Use Ruby 2.3.1 in .gitlab.ci.yml
- Change Gemfile.lock using latest gem
- Use before_action istead of deprecated before_filter

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,15 @@
+image: ruby:2.3.1
+
+stages:
+  - test
+
+cache:
+  paths:
+    - cache/
+
 before_script:
   - apt-get update -qy
   - apt-get install -y nodejs
-  - ruby -v
-  - which ruby
   - gem install bundler
   - bundle install --path /cache
 
