--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,18 +1,11 @@
-image: ruby:2.3.1
-
-stages:
-  - test
-
-cache:
-  paths:
-    - cache/
-
 before_script:
   - apt-get update -qy
   - apt-get install -y nodejs
+  - ruby -v
+  - which ruby
   - gem install bundler
   - bundle install --path /cache
 
 rspec:
   script:
-    - rspec
+    - bundle exec rspec
