--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,8 +14,8 @@ before_script:
   - apt-get install -qy libfontconfig1
   - export PHANTOM_JS="phantomjs-2.1.1-linux-x86_64"
   - wget -q https://bitbucket.org/ariya/phantomjs/downloads/$PHANTOM_JS.tar.bz2 --referer=https://bitbucket.org -P /cache/
-  - tar xjf $PHANTOM_JS.tar.bz2
-  - mv $PHANTOM_JS /usr/local/share
+  - tar xjf /cache/$PHANTOM_JS.tar.bz2 -C /cache
+  - mv /cache/$PHANTOM_JS /usr/local/share
   - ln -sf /usr/local/share/$PHANTOM_JS/bin/phantomjs /usr/local/bin
   - gem install bundler
   - cp spec/wulin_app/config/database.ci.yml spec/wulin_app/config/database.yml
