--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,7 @@ before_script:
   # - mv /cache/$PHANTOM_JS /usr/local/share
   # - ln -sf /usr/local/share/$PHANTOM_JS/bin/phantomjs /usr/local/bin
   - export PHANTOM_JS_VERSION="v2.1.1"
-  - wget -q https://github.com/paladox/phantomjs/archive/phantomjs-$PHANTOM_JS_VERSION.tar.gz -P /cache/
+  - wget https://github.com/paladox/phantomjs/archive/$PHANTOM_JS_VERSION.tar.gz -P /cache/
   - tar xjf /cache/phantomjs-$PHANTOM_JS_VERSION.tar.gz -C /cache
   - mv /cache/phantomjs-$PHANTOM_JS_VERSION /usr/local/share
   - ln -sf /usr/local/share/phantomjs-$PHANTOM_JS_VERSION/bin/phantomjs /usr/local/bin
