MISC - Use v flag to show all the files being extracted for tar

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,7 +19,7 @@ before_script:
   # - ln -sf /usr/local/share/$PHANTOM_JS/bin/phantomjs /usr/local/bin
   - export PHANTOM_JS_VERSION="v2.1.1"
   - wget https://github.com/paladox/phantomjs/archive/$PHANTOM_JS_VERSION.tar.gz -P /cache/phantomjs/
-  - tar xzf /cache/phantomjs/$PHANTOM_JS_VERSION.tar.gz -C /cache/phantomjs
+  - tar vxzf /cache/phantomjs/$PHANTOM_JS_VERSION.tar.gz -C /cache/phantomjs
   - mv /cache/phantomjs/$PHANTOM_JS_VERSION /usr/local/share/phantomjs
   - ln -sf /usr/local/share/phantomjs/$PHANTOM_JS_VERSION/bin/phantomjs /usr/local/bin
   - gem install bundler
