MISC #64854 - Upgrade Rails to 5.1.0

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,9 @@ pkg/*
 spec/tmp/*
 doc
 .DS_Store
+.ruby-version
 spec/wulin_app/db/log/*.log
 spec/wulin_app/tmp/
 spec/wulin_app/.sass-cache
+spec/wulin_app/.ruby-version
 spec/wulin_app/config/database.yml
