MISC #71692 - RuboCop Happy: Lint/AmbiguousRegexpLiteral

--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -7,9 +7,9 @@
 # versions of RuboCop, may require this file to be generated again.
 
 # Offense count: 5
-Lint/AmbiguousRegexpLiteral:
-  Exclude:
-    - 'features/step_definitions/general.rb'
+# Lint/AmbiguousRegexpLiteral:
+#   Exclude:
+#     - 'features/step_definitions/general.rb'
 
 # Offense count: 6
 Lint/DuplicateMethods:
