MISC #71692 - RuboCop Happy: Exclude app/screens/grid_states_screen.rb for Lint/HandleExceptions

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -93,6 +93,10 @@ Lint/AmbiguousBlockAssociation:
   Exclude:
     - 'spec/generator/*.rb'
 
+Lint/HandleExceptions:
+  Exclude:
+    - 'app/screens/grid_states_screen.rb'
+
 #############################
 # TODO: Should review later
 #############################
