--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -97,6 +97,10 @@ Lint/HandleExceptions:
   Exclude:
     - 'app/screens/grid_states_screen.rb'
 
+Lint/RescueException:
+  Exclude:
+    - 'lib/wulin_master/components/grid/grid_states.rb'
+
 #############################
 # TODO: Should review later
 #############################
