MISC #71692 - RuboCop Happy: Naming/AccessorMethodName

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -109,3 +109,9 @@ Metrics/CyclomaticComplexity:
 
 Metrics/PerceivedComplexity:
   Enabled: false
+
+Metrics/BlockLength:
+  Enabled: false
+
+Metrics/ModuleLength:
+  Enabled: false
