--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -6,62 +6,14 @@
 # Note that changes in the inspected code, or installation of new
 # versions of RuboCop, may require this file to be generated again.
 
-# Offense count: 43
-Lint/Void:
-  Exclude:
-    - 'spec/controllers/wulin_master/screen_controller_spec.rb'
-    - 'spec/menu/menu_spec.rb'
-    - 'spec/screen/column_spec.rb'
-    - 'spec/screen/grid_spec.rb'
-    - 'spec/screen/screen_spec.rb'
-    - 'spec/screen/toolbar_item_spec.rb'
-
 # Offense count: 5
-Metrics/AbcSize:
-  Max: 144
-
-# Offense count: 24
-# Configuration parameters: CountComments, ExcludedMethods.
-Metrics/BlockLength:
-  Max: 317
-
-# Offense count: 2
-# Configuration parameters: CountBlocks.
-Metrics/BlockNesting:
-  Max: 4
-
-# Offense count: 4
-Metrics/CyclomaticComplexity:
-  Max: 24
-
-# Offense count: 8
-# Configuration parameters: AllowHeredoc, AllowURI, URISchemes, IgnoreCopDirectives, IgnoredPatterns.
-# URISchemes: http, https
-Metrics/LineLength:
-  Max: 183
-
-# Offense count: 1
-# Configuration parameters: CountComments.
-Metrics/MethodLength:
-  Max: 77
-
-# Offense count: 5
-# Configuration parameters: CountComments.
-Metrics/ModuleLength:
-  Max: 173
-
-# Offense count: 2
-Metrics/PerceivedComplexity:
-  Max: 22
-
-# Offense count: 5
-Naming/AccessorMethodName:
-  Exclude:
-    - 'app/controllers/wulin_master/inclusion_exclusion_controller.rb'
-    - 'app/controllers/wulin_master/master_detail_controller.rb'
-    - 'app/controllers/wulin_master/menuable.rb'
-    - 'app/models/wulin_master/grid_state.rb'
-    - 'lib/wulin_master/components/grid/grid_options.rb'
+# Naming/AccessorMethodName:
+#   Exclude:
+#     - 'app/controllers/wulin_master/inclusion_exclusion_controller.rb'
+#     - 'app/controllers/wulin_master/master_detail_controller.rb'
+#     - 'app/controllers/wulin_master/menuable.rb'
+#     - 'app/models/wulin_master/grid_state.rb'
+#     - 'lib/wulin_master/components/grid/grid_options.rb'
 
 # Offense count: 10
 # Configuration parameters: NamePrefix, NamePrefixBlacklist, NameWhitelist.
