--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,6 +2,7 @@ inherit_from: .rubocop_todo.yml
 
 AllCops:
   DisplayCopNames: true
+  TargetRubyVersion: 2.3.1
   Exclude:
     - '**/*.yml'
     - 'db/**/*'
