MISC #71692 - RuboCop Happy: Use class variable instead of constant for default actions

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -94,6 +94,11 @@ Lint/HandleExceptions:
   Exclude:
     - 'app/screens/grid_states_screen.rb'
 
+Style/ClassVars:
+  Exclude:
+    - 'lib/wulin_master/components/grid/grid_actions.rb'
+
+
 #############################
 # TODO: Should review later
 #############################
