MISC - Use new syntax instead of stub/should in rspec

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -9,7 +9,7 @@ AllCops:
     - 'deployment/**/*'
     - 'bin/**/*'
     - 'spec/spec_helper.rb'
-    - 'spec/**/*' # TODO: Should remove after Rspec works
+    # - 'spec/**/*' # TODO: Should remove after Rspec works
     - 'lib/generators/wulin_master/screen_and_grid/templates/*.rb'
 
 Style/StringLiterals:
