--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -83,9 +83,9 @@ Style/NumericLiterals:
 Rails:
   Enabled: true
 
-########################
-# Project specific rules
-########################
+Rails/HttpPositionalArguments:
+  Exclude:
+    - 'spec/**/*'
 
 Metrics/BlockLength:
   Max: 35
