--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ before_script:
   - cp spec/wulin_app/config/database.ci.yml spec/wulin_app/config/database.yml
   - rm -rf Gemfile.lock
   - bundle install --path /cache
-  - bundle exec rake db:reset RAILS_ENV=test
+  - bundle exec rake db:drop db:create db:migrate RAILS_ENV=test
 
 test:
   script:
