--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,6 +22,6 @@ before_script:
 test:
   script:
     - bundle exec rubocop
-    # - bundle exec rspec
+    - bundle exec rspec
     - bundle exec rake assets:precompile
     - bundle exec cucumber
