MISC #59 - Put cucumber back in CI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,4 +24,4 @@ test:
     - bundle exec rubocop
     - bundle exec rspec
     - bundle exec rake assets:precompile
-    # - bundle exec cucumber
+    - bundle exec cucumber
