FEATURE #78 - Update RuboCop and Make it happy

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -11,6 +11,7 @@ AllCops:
     - 'spec/spec_helper.rb'
     - 'spec/wulin_app/db/**/*'
     - 'lib/generators/wulin_master/screen_and_grid/templates/*.rb'
+    - 'lib/wulin_master/mapper.rb'
 
 Style/StringLiterals:
   Enabled: false
