--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,7 @@ variables:
   POSTGRES_DB: wulin_app_test
   POSTGRES_USER: postgres
   POSTGRES_PASSWORD: ''
+  POSTGRES_HOST_AUTH_METHOD: trust
 
 before_script:
   - apt-get update -qy
